--- a/com.lukeshingles.ddnsgodaddy.plist
+++ b/com.lukeshingles.ddnsgodaddy.plist
@@ -9,8 +9,10 @@
 		<string>/Users/lshingles/ddnsgodaddy.py</string>
 	</array>
 	<key>StandardOutPath</key>
-	<string>/Users/lshingles/ddnsgodaddy.txt</string>
+	<string>/Users/lshingles/ddnsgodaddy.out.txt</string>
 	<key>StandardErrorPath</key>
+        <string>/Users/lshingles/ddnsgodaddy.err.txt</string>
+	<key>StartInterval</key>
 	<integer>300</integer>
 </dict>
 </plist>
