--- a/com.lukeshingles.ddnsgodaddy.plist
+++ b/com.lukeshingles.ddnsgodaddy.plist
@@ -9,9 +9,9 @@
 		<string>/Users/lshingles/ddnsgodaddy.py</string>
 	</array>
 	<key>StandardOutPath</key>
-	<string>/Users/lshingles/ddnsgodaddy.out.txt</string>
+	<string>/Users/lshingles/ddnsgodaddy_log.txt</string>
 	<key>StandardErrorPath</key>
-        <string>/Users/lshingles/ddnsgodaddy.err.txt</string>
+        <string>/Users/lshingles/ddnsgodaddy_log.txt</string>
 	<key>StartInterval</key>
 	<integer>300</integer>
 </dict>
